2002-04-10  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/grob.cc (internal_get_grob_property): also typecheck
	property reads. Catches even more undocced properties. Bugfixing
	left for the uninspired masses.

	* lily/beam.cc: remove end_after_line_breaking().

	* lily/grob.cc (calculate_dependencies): remove list support for callbacks.

	* lily/font-size-engraver.cc: only do font-interface.

2002-04-10  Heikki Junes <hjunes@cc.hut.fi>

	* lilypond-font-lock.el: Handle notes with cautionary accidentals.
	  Add few keywords.

2002-04-09 Chris Jackson <chris@fluffhouse.org.uk>

	* lily/arpeggio.cc: New function brew_chord_bracket to draw chord
	brackets using arpeggio requests.
	
	* ly/property-init.ly: Shorthand \arpeggioBracket defined as the
	molecule-callback to use for drawing the brackets.

	* Documentation/user/refman.itely: 
	* input/test/chord-bracket.ly: Chord brackets documented
	
2002-04-10  Han-Wen  <hanwen@cs.uu.nl>

	* mf/feta-din-code.mf: tweaks for p, s. New dynamic r sign. 

	* mf/feta-eindelijk.mf: tweak for eighth rest: move bulb up.

2002-04-09  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/tuplet-bracket.cc (after_line_breaking): bugfix for forced
	direction tuplets on beams.

2002-04-08  Chris Jackson <chris@fluffhouse.org.uk>

	* lilypond-indent.el: Bugfix of indentation of final point in buffer

2002-04-09  Heikki Junes <hjunes@cc.hut.fi>

	* lilypond-mode.el: new command: LilyPond-un-comment-region.
	Added 2Midi to "Command"-menu. Inspired by latex.el and tex.el: 
	separate "Command"-menu and "LilyPond"-menu. Added "Miscellanous"-
	submenu to "LilyPond"-menu.

	* lilypond-mode.el: Added "Midi all" to "Command"-menu, i.e.,
	an interface to play midi.

2002-04-08  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* input/regression/script-stack-order.ly: new file.

2002-04-08  Han-Wen  <hanwen@cs.uu.nl>

	* VERSION (MY_PATCH_LEVEL): Release 1.5.51.

	* mf/feta-din-code.mf: kerning for dynamics.

2002-04-07  Han-Wen  <hanwen@cs.uu.nl>
